API -> Add StartTime
